--- a/style.css
+++ b/style.css
@@ -63,18 +63,20 @@ nav {
   align-items: center;
 }
 
-nav a {
+.links-container a {
   padding: 0 20px;
   display: flex;
   align-items: center;
   text-decoration: none;
   color: var(--text-color);
   font-weight: 600;
-
-  &:hover{
-    color: var(--hover-color);
-  }
+  transition: color 0.2s ease;
 }
+
+.links-container a:hover, .links-container a:active, .links-container a.active {
+  color: var(--hover-color);
+}
+
 
 nav svg {
   fill: var(--text-color);
@@ -330,7 +332,7 @@ footer{
     transition: 0.75s ease-out;
   }
 
-  nav a {
+  .links-container a {
     width: 100%;
     padding: 20px;
     justify-content: flex-start;
