--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav svg {
   background-image: url('images/feren.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 115%;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,24 +121,33 @@ nav svg {
 .home-container::after {
   content: "";
   position: absolute;
+  width: 100%;
+  height: 100.5%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
-  z-index: 1;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%);
+  z-index: 0;
 }
 
-.home-container > * {
-  position: relative;
+.home-container .logo-wrapper {
+  text-align: center;
   z-index: 2;
 }
 
 .home-container img {
   margin: auto;
   width: 40rem;
+  display: block;
+  max-width: 100%;
 }
 
+.home-container p {
+  color: var(--text-color);
+  font-size: 1.5rem;
+  font-weight: bold; 
+}
 
   /* image section */
   #Image1{
@@ -189,6 +198,107 @@ nav svg {
     background-attachment: fixed;
     background-position: center;
   }
+
+  /* rate and social icons */
+  #Rateandsocial{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .rate-and-icon{
+    color: var(--text-color);
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .rate-and-icon p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+  }
+
+  .social-media-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .social-media-icon a{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: auto;
+    height: auto;
+    color: var(--text-color);
+    border: 2px solid var(--text-color);
+    padding: 10px;
+    margin: 20px;
+  }
+
+  .social-media-icon-and-name p{
+    font-size: 10px;
+  }
+
+/* Custom Alert Box */
+#custom-alert {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  background-color: var(--text-color-1);
+  border: 2px solid var(--text-color);
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  border-radius: 8px;
+}
+
+#custom-alert-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+#custom-alert button{
+  width: auto;
+  height: auto;
+}
+
+#custom-alert .close-btn {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  float: right;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 15%;
+}
+
+#custom-alert a {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 30px 0;
+  padding: 10px;
+  color: var(--background-color);
+  font-weight: bold;
+}
+
+#custom-alert i {
+  margin-right: 8px;
+}
+
 
 /* sections */
 .Section {
@@ -268,23 +378,6 @@ nav svg {
   line-height: 1.4;
 }
 
-.social-media-icon p{
-  color: var(--text-color);
-  font-size: 20px;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-}
-
-.social-media-icon a{
-  display: flex;
-  justify-content: center;
-  color: var(--text-color);
-  font-size: 40px;
-}
-
 footer{
     display: flex;
     justify-content: center;
@@ -304,7 +397,7 @@ footer{
 
 
 
-/* responsive website */
+/* responsive website for tablets */
 @media only screen and (max-width: 1200px) {
   nav {
     height: 50px;
@@ -374,7 +467,10 @@ footer{
   
 }
 
+/* responsive website for mobiles */
+
 @media only screen and (max-width: 768px) {
+  
   nav {
     height: 50px;
   }
@@ -443,6 +539,7 @@ footer{
 
   .home-container {
     height: 50%;
+    background-size: 100%;
   }
 
   .home-container img {
@@ -528,23 +625,9 @@ footer{
     line-height: 1.4;
   }
 
-  .social-media-icon p{
-    font-size: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .social-media-icon a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size:30px;
-    margin: 10px;
-  }
-
 footer{
-    font-size: x-small;
+  margin-top: 15px;
+    font-size: small;
     height: 50px;
 }
 
