--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --background-color: #000;
   --text-color: #d94505;
   --text-color-1: #bababa;
-  --hover-color:#bababa;
+  --hover-color: #bababa;
   --text-color-2: #ffa500;
   --text-color-3: #fff;
   --div-color: #808080;
@@ -24,12 +24,12 @@ body {
   background-color: var(--background-color);
 }
 
-span{
+span {
   color: var(--text-color);
   font-size: 18px;
 }
 
-em{
+em {
   font-style: normal;
   color: #d94505;
 }
@@ -73,10 +73,11 @@ nav {
   transition: color 0.2s ease;
 }
 
-.links-container a:hover, .links-container a:active, .links-container a.active {
+.links-container a:hover,
+.links-container a:active,
+.links-container a.active {
   color: var(--hover-color);
 }
-
 
 nav svg {
   fill: var(--text-color);
@@ -99,7 +100,7 @@ nav svg {
 
 .home-container {
   position: relative;
-  background-image: url('images/feren.jpg');
+  background-image: url("images/feren.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -118,7 +119,11 @@ nav svg {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
   z-index: 0;
 }
 
@@ -137,16 +142,16 @@ nav svg {
 .home-container p {
   color: var(--text-color);
   font-size: 1.5rem;
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 /* back tp top */
 
-.back-to-top{
+.back-to-top {
   position: fixed;
 }
 
-.back-to-top a{
+.back-to-top a {
   position: fixed;
   color: var(--text-color);
   background-color: var(--background-color);
@@ -158,97 +163,97 @@ nav svg {
   right: 20px;
 }
 
-  /* image section */
-  #Image1{
-    height: 50vh;
-    background-image: url('images/rkaka.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  #Image2{
-    height: 50vh;
-    background-image: url('images/pizza 3l tawle ba3 blur bg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  #Image3{
-    height: 50vh;
-    background-image: url('images/hamburger.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  #Image4{
-    height: 50vh;
-    background-image: url('images/set pizza bl feren.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  #Image5{
-    height: 50vh;
-    background-image: url('images/pizza 3l tawle.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  #Image6{
-    height: 50vh;
-    background-image: url('images/pizza in hand.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
+/* image section */
+#Image1 {
+  height: 50vh;
+  background-image: url("images/rkaka.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+#Image2 {
+  height: 50vh;
+  background-image: url("images/pizza 3l tawle ba3 blur bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+#Image3 {
+  height: 50vh;
+  background-image: url("images/hamburger.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+#Image4 {
+  height: 50vh;
+  background-image: url("images/set pizza bl feren.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+#Image5 {
+  height: 50vh;
+  background-image: url("images/pizza 3l tawle.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+#Image6 {
+  height: 50vh;
+  background-image: url("images/pizza in hand.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
 
-  /* rate and social icons */
-  #Rateandsocial{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* rate and social icons */
+#Rateandsocial {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .rate-and-icon{
-    color: var(--text-color);
-    font-size: 20px;
-    font-weight: bold;
-  }
+.rate-and-icon {
+  color: var(--text-color);
+  font-size: 20px;
+  font-weight: bold;
+}
 
-  .rate-and-icon p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
-  }
+.rate-and-icon p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+}
 
-  .social-media-icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.social-media-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .social-media-icon a{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: auto;
-    height: auto;
-    color: var(--text-color);
-    border: 2px solid var(--text-color);
-    padding: 10px;
-    margin: 20px;
-  }
+.social-media-icon a {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: auto;
+  height: auto;
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
+  padding: 10px;
+  margin: 20px;
+}
 
-  .social-media-icon-and-name p{
-    font-size: 10px;
-  }
+.social-media-icon-and-name p {
+  font-size: 10px;
+}
 
 /* Custom Alert Box */
 #custom-alert {
@@ -277,7 +282,7 @@ nav svg {
   z-index: 999;
 }
 
-#custom-alert button{
+#custom-alert button {
   width: auto;
   height: auto;
 }
@@ -308,7 +313,6 @@ nav svg {
   margin-right: 8px;
 }
 
-
 /* sections */
 .Section {
   width: 100%;
@@ -321,13 +325,12 @@ nav svg {
   padding-bottom: 30px;
 }
 
-#Appetizers .section-title{
+#Appetizers .section-title {
   margin: 4rem 0;
-  
 }
 
 .section-title {
-  margin:4rem 0;
+  margin: 4rem 0;
   font-size: 40px;
   color: var(--text-color);
   text-align: center;
@@ -373,11 +376,11 @@ nav svg {
   margin-bottom: 0.3rem;
 }
 
-.section-name-and-price-pizza h1{
+.section-name-and-price-pizza h1 {
   display: flex;
 }
 
-.section-name-and-price-pizza .price p{
+.section-name-and-price-pizza .price p {
   margin-left: 40px;
 }
 
@@ -387,24 +390,15 @@ nav svg {
   line-height: 1.4;
 }
 
-footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    height: 80px;
-    font-weight: 600;
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  height: 80px;
+  font-weight: 600;
 }
-
-
-
-
-
-
-
-
-
 
 /* responsive website for tablets */
 @media only screen and (max-width: 1200px) {
@@ -473,13 +467,19 @@ footer{
     max-width: 90%;
     padding: 0.5rem;
   }
-  
 }
+
+
+
+
+
+
+
+
 
 /* responsive website for mobiles */
 
 @media only screen and (max-width: 768px) {
-  
   nav {
     height: 50px;
   }
@@ -535,7 +535,7 @@ footer{
   }
 
   /* */
-  span{
+  span {
     font-size: 10.5px;
   }
 
@@ -557,23 +557,28 @@ footer{
   }
 
   /* images */
-  #Image1, #Image2, #Image3, #Image4, #Image5, #Image6{
+  #Image1,
+  #Image2,
+  #Image3,
+  #Image4,
+  #Image5,
+  #Image6 {
     height: 30vh;
   }
-  
+
   /* section */
 
-  .Section{
+  .Section {
     margin-bottom: 50px;
     padding-top: 20px;
     margin-top: 0px;
   }
 
-  #Appetizers .section-title{
+  #Appetizers .section-title {
     margin: 3rem 0;
   }
 
-  .section-title{
+  .section-title {
     margin: 3rem 0;
     font-size: 1.1rem;
     text-decoration: underline;
@@ -590,20 +595,20 @@ footer{
     max-width: 90%;
     padding: 0.5rem;
   }
-  
+
   .section-container img {
     width: 90px;
     border-radius: 20px;
     padding: 10px;
   }
-  
+
   .section-item-container {
     display: flex;
     flex-direction: column;
     flex: 1;
     padding: 0 20px 0 10px;
   }
-  
+
   .section-name-and-price {
     font-size: 11px;
     color: var(--text-color-2);
@@ -618,26 +623,24 @@ footer{
     margin-bottom: 0.2rem;
   }
 
-  .section-name-and-price-pizza h1{
+  .section-name-and-price-pizza h1 {
     display: flex;
     justify-content: space-between;
   }
 
-  .section-name-and-price-pizza .price p{
+  .section-name-and-price-pizza .price p {
     margin-left: 0px;
   }
-  
-  
+
   .section-item-description {
     color: var(--text-color-1);
     font-size: 6.5px;
     line-height: 1.4;
   }
 
-footer{
-  margin-top: 15px;
+  footer {
+    margin-top: 15px;
     font-size: small;
     height: 50px;
-}
-
+  }
 }
