--- a/style.css
+++ b/style.css
@@ -58,41 +58,6 @@ nav {
   font-size: 30px;
 }
 
-.links-container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.links-container a {
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: var(--text-color);
-  font-weight: 600;
-  transition: color 0.2s ease;
-}
-
-.links-container a:hover,
-.links-container a:active,
-.links-container a.active {
-  text-shadow: 1px 2.5px 5px var(--text-color-2);
-}
-
-nav svg {
-  fill: var(--text-color);
-}
-
-#sidebar-active {
-  display: none;
-}
-
-.open-sidebar-button,
-.close-sidebar-button {
-  display: none;
-}
-
 /* home */
 #Home {
   background-color: var(--background-color);
@@ -433,6 +398,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: var(--background-color);
   color: var(--text-color);
   height: 80px;
@@ -677,6 +643,7 @@ footer {
   }
 
   footer {
+    text-align: center;
     margin-top: 15px;
     font-size: small;
     height: 50px;
