--- a/style.css
+++ b/style.css
@@ -550,6 +550,7 @@ footer {
     justify-content: space-between;
     margin-bottom: 0.2rem;
   }
+
   .section-name-and-price-pizza {
     font-size: 11px;
     color: var(--text-color-2);
@@ -560,6 +561,12 @@ footer {
   .section-name-and-price-pizza h1 {
     display: flex;
     justify-content: space-between;
+  }
+
+  .section-name-and-price-pizza h1.price {
+    display: flex;
+    float: right;
+    gap: 25px;
   }
 
   .section-name-and-price-pizza .price p {
