--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ nav {
 }
 
 #custom-alert .close-btn {
-  background-color: var(--background-color);
+  background-color: transparent;
   color: var(--text-color);
   padding: 10px 15px;
   border: none;
@@ -398,6 +398,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: var(--background-color);
   color: var(--text-color);
   height: 80px;
@@ -405,7 +406,7 @@ footer {
 }
 
 /* responsive website for tablets */
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1000px) {
   nav {
     height: 50px;
   }
@@ -414,22 +415,50 @@ footer {
     font-size: 20px;
   }
 
-  #Menu {
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    background-color: var(--background-color);
-    position: sticky;
-    top: 50px;
-    z-index: 999;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  
-
   Button {
     width: 130px;
     height: 40px;
+  }
+
+  .links-container {
+    flex-direction: column;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 10;
+    width: 200px;
+    background-color: var(--background-color);
+    box-shadow: -5px 0 -5px rgba(0, 0, 0, 0.25);
+    transition: 0.75s ease-out;
+  }
+
+  .links-container a {
+    width: 100%;
+    padding: 20px;
+    justify-content: flex-start;
+  }
+
+  .open-sidebar-button {
+    display: block;
+  }
+
+  .close-sidebar-button {
+    padding: 20px;
+    display: block;
+  }
+
+  #sidebar-active:checked ~ .links-container {
+    right: 0;
+  }
+
+  #sidebar-active:checked ~ #overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
   }
 
   .section-container {
@@ -459,6 +488,47 @@ footer {
   Button {
     width: 130px;
     height: 40px;
+  }
+
+  .links-container {
+    flex-direction: column;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 10;
+    width: 200px;
+    background-color: var(--background-color);
+    box-shadow: -5px 0 -5px rgba(0, 0, 0, 0.25);
+    transition: 0.75s ease-out;
+  }
+
+  nav a {
+    width: 100%;
+    padding: 20px;
+    justify-content: flex-start;
+  }
+
+  .open-sidebar-button {
+    display: block;
+  }
+
+  .close-sidebar-button {
+    padding: 20px;
+    display: block;
+  }
+
+  #sidebar-active:checked ~ .links-container {
+    right: 0;
+  }
+
+  #sidebar-active:checked ~ #overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
   }
 
   /* */
@@ -550,7 +620,6 @@ footer {
     justify-content: space-between;
     margin-bottom: 0.2rem;
   }
-
   .section-name-and-price-pizza {
     font-size: 11px;
     color: var(--text-color-2);
@@ -561,12 +630,6 @@ footer {
   .section-name-and-price-pizza h1 {
     display: flex;
     justify-content: space-between;
-  }
-
-  .section-name-and-price-pizza h1.price {
-    display: flex;
-    float: right;
-    gap: 25px;
   }
 
   .section-name-and-price-pizza .price p {
@@ -580,6 +643,7 @@ footer {
   }
 
   footer {
+    text-align: center;
     margin-top: 15px;
     font-size: small;
     height: 50px;
