--- a/style.css
+++ b/style.css
@@ -40,22 +40,32 @@ header {
   position: sticky;
   top: 0;
   z-index: 1000;
+  width: 100%;
+  background-color: var(--background-color);
 }
 
 nav {
   height: 80px;
-  background-color: var(--background-color);
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 0 20px;
 }
 
 .logo {
-  flex: 1;
   color: var(--text-color);
   font-weight: bold;
   font-size: 30px;
+  text-decoration: none;
+}
+
+.order-button-index a {
+  color: var(--text-color);
+  font-size: 16px;
+  padding: 10px 15px;
 }
 
 /* home */
@@ -125,7 +135,7 @@ nav {
   font-size: 45px;
   width: auto;
   height: auto;
-  bottom: 20px;
+  bottom: 30px;
   right: 20px;
 }
 
@@ -214,6 +224,7 @@ nav {
   height: auto;
   color: var(--text-color);
   border: 2px solid var(--text-color);
+  border-radius: 50%;
   padding: 10px;
   margin: 20px;
 }
@@ -403,75 +414,6 @@ footer {
   color: var(--text-color);
   height: 80px;
   font-weight: 600;
-}
-
-/* responsive website for tablets */
-@media only screen and (max-width: 1000px) {
-  nav {
-    height: 50px;
-  }
-
-  .logo {
-    font-size: 20px;
-  }
-
-  Button {
-    width: 130px;
-    height: 40px;
-  }
-
-  .links-container {
-    flex-direction: column;
-    align-items: flex-start;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    z-index: 10;
-    width: 200px;
-    background-color: var(--background-color);
-    box-shadow: -5px 0 -5px rgba(0, 0, 0, 0.25);
-    transition: 0.75s ease-out;
-  }
-
-  .links-container a {
-    width: 100%;
-    padding: 20px;
-    justify-content: flex-start;
-  }
-
-  .open-sidebar-button {
-    display: block;
-  }
-
-  .close-sidebar-button {
-    padding: 20px;
-    display: block;
-  }
-
-  #sidebar-active:checked ~ .links-container {
-    right: 0;
-  }
-
-  #sidebar-active:checked ~ #overlay {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
-  }
-
-  .section-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: var(--div-color);
-    margin: 1rem 0;
-    border-radius: 15px;
-    width: 90%;
-    max-width: 90%;
-    padding: 0.5rem;
-  }
 }
 
 /* responsive website for mobiles */
