--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ nav {
 }
 #Image4 {
   height: 50vh;
-  background-image: url("images/set pizza bl feren.jpg");
+  background-image: url("images/drinks.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -182,7 +182,7 @@ nav {
 }
 #Image6 {
   height: 50vh;
-  background-image: url("images/pizza in hand.jpg");
+  background-image: url("images/arguile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
