--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Oleo+Script:wght@400;700&family=Press+Start+2P&family=Rubik+Mono+One&display=swap');
 @font-face {
     font-family: 'Carnivalee Freakshow';
-    src: url('fonts/Carnevalee Freakshow.ttf') format('truetype'); /* Path to the font file */
+    src: url('fonts/Carnevalee Freakshow.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
@@ -408,13 +408,14 @@ footer p{
     top: 0;
     width: 300px;
     height: 100vh;
-    background: var(--text-color-3);
+    background: var(--background-color);
     transition: right 0.3s ease-in-out;
     padding: 20px;
-    border-left: 4px solid var(--text-color);
+    border-left: 4px solid var(--text-color-2);
     z-index: 6;
-    box-shadow: -3px 0 3px 0 var(--text-color);
+    box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--background-color-2);
 }
 
 .cart-container.active {
@@ -428,7 +429,7 @@ footer p{
     border-bottom: 2px solid var(--text-color-2);
     padding-bottom: 10px;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 #cart-items {
@@ -440,17 +441,18 @@ footer p{
     border: 1px solid var(--text-color-2);
     border-radius: 8px;
     padding: 10px;
-    background: rgb(163, 163, 163);
+    background: var(--text-color-3);
+    color: var(--background-color-2);
 }
 
 #cart-items li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: black;
+    color: var(--background-color-2);
     font-weight: 500;
     padding: 10px 0;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid var(--text-color-1);
     font-family: "Oleo Script", serif;
 }
 
@@ -481,30 +483,28 @@ footer p{
     font-weight: 500;
     transition: background-color 0.3s, transform 0.2s;
     outline: none;
+    color: var(--background-color-2);
 }
 
 .cart-buttons button:hover {
     transform: scale(1.02);
 }
 
-#clear-cart {
-    background-color: red;
-    color: white;
-}
-
 #callTakeawayOrder {
     background-color: var(--text-color-2);
-    color: white;
 }
 
 #order-btn-delivery {
     background-color: var(--text-color);
-    color: white;
+}
+
+#clear-cart {
+    background-color: red;
 }
 
 #close-cart {
-    background-color: black;
-    color: white;
+    background-color: var(--background-color);
+    border: 2px solid var(--text-color-2);
 }
 
 /* takeaway alert */
